big change to tiep

--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ include:
   - _redirects
 
 # Site settings
-title: Matt Grey
-long-title: Matt Grey Design
-email: mattgreydesign@gmail.com
-description: "The selected portfolio of London based digital product designer Matt Grey"
+title: Tiếp
+long-title: Những căn hộ bán và cho thuê tại Bình Dương của Phạm Xuân Tiếp
+email: px@tiep.us
+description: "Những căn hộ bán và cho thuê tại Bình Dương của Phạm Xuân Tiếp"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://himatt.com" # the base hostname & protocol for your site
+url: "https://v2.tiep.us" # the base hostname & protocol for your site
 timezone: Europe/London
 year: 2021
 start-year: 2010
@@ -31,9 +31,10 @@ sitemap: true
 
 # Social networks
 social-username:
-  twitter: "@mattgreydesign"
+  facebook: "@Pxtiep"
+  twitter: "@pxtiep"
   linkedin: "himatt"
-  github: "mattgreydesign"
+  github: "@pxtiep"
   medium: "@mattgreydesign"
   pinterest: "mattgreydesign"
   instagram: "mattgreydesign"
@@ -67,7 +68,7 @@ compress_html: # http://jch.penibelst.de/
 
 # Structure
 navigation:
-  - title: Projects
+  - title: Căn hộ
     url: /
   - title: Fonts
     url: /fonts
