--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ compress_html: # http://jch.penibelst.de/
 navigation:
   - title: Căn hộ
     url: /
-  - title: Fonts
+  - title: AdSense
     url: /adsense
   - title: Giới thiệu
     url: /about
