--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
-  fonts:
+  adsense:
     output: true
     permalink: /adsense/:path/
 
